2014-12-11  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r177104. rdar://problem/19135389

    2014-12-10  Timothy Horton  <timothy_horton@apple.com>

            Provide SPI to asynchronously move a WKView into a window and know when it has painted
            https://bugs.webkit.org/show_bug.cgi?id=139460
            <rdar://problem/19135389>

            Reviewed by Anders Carlsson.

            * UIProcess/API/Cocoa/WKViewPrivate.h:
            Add _prepareForMoveToWindow:withCompletionHandler:, which internally
            goes through the motions of being parented in that window and calls
            the completion handler once painting is done and the view is ready
            to be displayed (upon which we expect the view to actually move into the window).

            * UIProcess/API/mac/WKView.mm:
            (-[WKView viewWillMoveToWindow:]):
            If we currently have a _targetWindowForMovePreparation (and are
            pretending to be in that window), avoid performing viewWillMoveToWindow:
            for a different window.

            (-[WKView viewDidMoveToWindow]):
            (-[WKView doWindowDidChangeScreen]):
            (-[WKView _intrinsicDeviceScaleFactor]):
            (-[WKView _colorSpace]):
            (-[WKView _targetWindowForMovePreparation]):
            If we have a _targetWindowForMovePreparation, use its properties instead
            of self.window's.

            (-[WKView _prepareForMoveToWindow:withCompletionHandler:]):
            Simulate a move into the target window, but defer sending the view state update.
            Then, send the view state update after registering the completion handler.

            * UIProcess/API/mac/WKViewInternal.h:
            * UIProcess/WebPageProxy.cpp:
            (WebKit::WebPageProxy::WebPageProxy):
            Rename m_viewStateChangeWantsReply to m_viewStateChangeWantsSynchronousReply.

            (WebKit::WebPageProxy::installViewStateChangeCompletionHandler):